--- a/.github/workflows/build-and-push-apk.yml
+++ b/.github/workflows/build-and-push-apk.yml
@@ -50,8 +50,7 @@ jobs:
 
       - name: Create release notes
         run: |
-          mkdir -p app/build
-          cat > app/build/release-notes.txt << EOF
+          cat > app/release-notes.txt << EOF
           BuildType: ${{ github.event.inputs.build_type }}
           Branch: ${{ github.ref_name }}
           Description: ${{ github.event.inputs.release_description }}
@@ -84,4 +83,11 @@ jobs:
         with:
           name: app-${{ github.event.inputs.build_type }}-${{ github.run_number }}
           path: app/build/outputs/apk/**/*.apk
+          retention-days: 30
+
+      - name: Upload Release Notes as Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: release-notes-${{ github.event.inputs.build_type }}-${{ github.run_number }}
+          path: app/release-notes.txt
           retention-days: 30
